[package]
name = "luadec-rust"
version = "0.1.5"
edition = "2021"
authors = ["ItsLucas <itslucas@itslucas.me>"]
description = "Safe Rust bindings for LuaDec - A Lua 5.1 bytecode decompiler"
repository = "https://github.com/ItsLucas/luadec-rust"
homepage = "https://github.com/ItsLucas/luadec-rust"
documentation = "https://docs.rs/luadec"
readme = "README.md"
license = "MIT"
keywords = ["lua", "decompiler", "bytecode", "reverse-engineering", "lua51"]
categories = ["parsing", "development-tools", "games"]
rust-version = "1.63"

# Exclude large directories and files from the published crate
exclude = [
    "test/",
    "test-compiled/",
    "vcproj-*/",
    "ChunkSpy/",
    "LuaAssemblyTools/",
    "bin/",
    "compare/",
    "ilua/",
    "memwatch/",
    "lua-5.2/",
    "lua-5.3/",
    "target/",
    "*.o",
    "*.a",
    "*.exe",
]

[lib]
name = "luadec"
crate-type = ["lib"]

[dependencies]
luadec-sys = { version = "0.1.4", default-features = false }
thiserror = "1.0"

[features]
default = []
"lua-5.1-32" = ["luadec-sys/lua-5.1-32"]

[dev-dependencies]
tempfile = "3.0"

[workspace]

[package.metadata.docs.rs]
# Build docs with all features on docs.rs
all-features = true
# Use a specific target for consistent docs
targets = ["x86_64-unknown-linux-gnu"]